--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -1,33 +1,48 @@
-$link-color: #2980b9;
+$primary-color: #2980b9;
 
 * {
   box-sizing: border-box;
 }
 
 main {
-  padding: 0 10px;
+  margin: 0;
 
-  h1 {
-    color: #3498db;
-    text-align: center;
-    margin: 5px;
-  }
+  header {
+    background: $primary-color;
+    padding: 5px 10px 20px 10px;
 
-  .search-field {
-    width: 100%;
-    border: solid 1px gray;
-    height: 3em;
-    padding: 5px;
-    box-sizing: border-box;
-    color: #34495e;
+    h1 {
+      color: white;
+      text-align: center;
+      margin: 3px;
+    }
+
+    .search-field {
+      width: 100%;
+      border: none;
+      height: 3em;
+      padding: 5px;
+      box-sizing: border-box;
+      color: #34495e;
+      background-color: white;
+      opacity: 0.6;
+      transition-duration: .2s;
+
+      &:focus {
+        opacity: 1;
+      }
+    }
   }
 
   ul.search-result {
-    padding: 10px 0;
+    padding: 10px;
 
     li.company {
       list-style: none;
       margin: 10px 0;
+      clear: both;
+      min-height: 61px;
+      
 
       h3 {
         font-size: 1em;
@@ -49,7 +64,7 @@ main {
       }
 
       .phone {
-        color: $link-color;
+        color: $primary-color;
         margin-right: 12px;
       }
 
