--- a/app/sass/app.scss
+++ b/app/sass/app.scss
@@ -13,14 +13,23 @@ main {
 
   header {
     background: $primary-color;
-    padding: 5px 10px 20px 10px;
+    padding: 0 10px 25px 10px;
     transition-duration: .3s;
 
     h1 {
-      color: white;
-      text-align: center;
+      color: $primary-color;
+      position: relative;
+      top: 2em;
+      right: 7px;
+      z-index: 10;
+      text-align: right;
       margin: 3px;
-      transition-duration: .3s;
+      font-size: .8em;
+      font-weight: normal;
+      display: inline-block;
+      float: right;
+      transform: rotate(-90deg) translate(-11px, 21px);
+      transition-duration: .5s;
     }
 
     .search-field {
@@ -46,7 +55,14 @@ main {
 
        h1 {
          font-size: 3em;
+         font-weight: bold;
+         top: 0;
+         right: 0;
+         text-align: center;
+         color: white;
          margin: 13px 0;
+         width: 100%;
+         transform: none;
        }
     }
   }
